# actix-juniper-async

./: Cargo.toml  benchmark.lua  benchmark.sh
src/: data.rs  main.rs  routes.rs  schema.rs
static/: product.json
