[package]
name = "urql"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-cors = "0.4.0"
serde = "1.0.116"
serde_json = "1.0.58"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
lazy_static = "1.4.0"
